--- a/paper_40_mpi.tex
+++ b/paper_40_mpi.tex
@@ -2,6 +2,7 @@
 \begin{document}
 
 \section{MASTER PERFORMANCE INDICATOR (MPI)}
+\label{sec:MPI}
 
     Software development organizations struggle to measure overall performance.  
     The Master Performance Indicator (MPI) is an algorithm to provide a single 
