--- a/paper_50_sdlc-ae.tex
+++ b/paper_50_sdlc-ae.tex
@@ -3,6 +3,7 @@
 
 % All about the SDLC Analytic Engine
 \section{SDLC ANALYTIC ENGINE}
+\label{sec:SDLC-AE}
 
 In order for an SDO to properly track the elements of MPI, a data storage system should be available to store the appropriate data.  A consistent storage system should help to avoid the problem of inaccurate
 data caused by numerous manipulations of the existing data \cite{Olson2003}. Plus, if the system
