--- a/paper_70_case-study.tex
+++ b/paper_70_case-study.tex
@@ -13,9 +13,9 @@ consists of availability, quality, and schedule.  Satisfaction and Requirements 
 
 An MPI calculation analyzing historical performance.
 
-\subsection{WITHOUT HISTORICAL DATA}
+%%\subsection{WITHOUT HISTORICAL DATA}
 
-An MPI calculation with default values for quality, schedule and requirements.
+%%An MPI calculation with default values for quality, schedule and requirements.
 
 
   
