--- a/references.bib
+++ b/references.bib
@@ -568,6 +568,15 @@
 	journal =	"Harvard Business Review",
 	pages =		"71-80"
 }
+@book{Klubeck2011,
+    author = {Klubeck, Martin},
+    title = {Metrics: How to Improve Key Business Results},
+    year = {2011},
+    isbn = {1430237260, 9781430237266},
+    edition = {1st},
+    publisher = {Apress},
+    address = {Berkely, CA, USA},
+} 
 @book{Kutner2003,
   title={Applied Linear Regression Models},
   author={Kutner, M.H. and Nachtsheim, C.J. and Neter, J.},
